[package]
name = "turbo"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "bin/turbo.rs"
name = "turbo"

[dependencies]
bip32 = { version = "0.5.0", default-features = false, features = [ "std", "secp256k1" ] }
bip39 = { version = "2.0.0", features = [ "rand_core" ] }
clap = { version = "4.2.1", features = [ "derive" ] }
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["std"] }
sha3 = "0.10.6"
thiserror = "1.0.40"
